updated elk stack

--- a/config/elk/logstash/logstash.conf
+++ b/config/elk/logstash/logstash.conf
@@ -1,39 +1,47 @@
 input {
-  file {
-    type => "nginx_access"
-    path => "/var/log/nginx/app_access.log"
-    start_position => beginning
-  }
-  file {
-    type => "app_dev"
-    path => "/var/www/app/var/logs/dev.log"
-    start_position => beginning
-  }
-  file {
-    type => "app_prod"
-    path => "/var/www/app/var/logs/prod.log"
-    start_position => beginning
-  }
+    file {
+        type => "nginx_access"
+        path => "/var/log/other/nginx/app_access.log"
+        start_position => beginning
+    }
+    file {
+        type => "app_admin_dev"
+        path => "/var/log/other/app/admin/dev.log"
+        start_position => beginning
+    }
+    file {
+        type => "app_admin_prod"
+        path => "/var/log/other/app/admin/prod.log"
+        start_position => beginning
+    }
+    file {
+        type => "app_website_dev"
+        path => "/var/log/other/app/website/dev.log"
+        start_position => beginning
+    }
+    file {
+        type => "app_website_prod"
+        path => "/var/log/other/app/website/prod.log"
+        start_position => beginning
+    }
 }
 
 filter {
-  if [type] == "nginx_access" {
-    grok {
-      patterns_dir => "./patterns"
-      match => { "message" => "%{NGINXACCESS}"}
+    if [type] == "nginx_access" {
+        grok {
+            patterns_dir => "/usr/share/logstash/patterns/"
+            match => { "message" => "%{NGINXACCESS}"}
+        }
+    } else if [type] in ["app_website_dev", "app_website_prod", "app_admin_dev", "app_admin_prod"] {
+        grok {
+            patterns_dir => "/usr/share/logstash/patterns"
+            match => { "message" => "%{SYMFONY}"}
+        }
     }
-  }
-  else if [type] in ["app_dev", "app_prod"] {
-    grok {
-      patterns_dir => "./patterns"
-      match => { "message" => "%{SYMFONY}"}
-    }
-  }
 }
 
 output {
-  elasticsearch {
-    host => "localhost"
-    cluster => "logstash"
-  }
+	elasticsearch {
+		hosts => "elasticsearch:9200"
+	}
 }
