--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - ./var/data/media/var:/var/www/app/var/uploads/media
             - ./var/data/indexes:/var/www/app/var/indexes
             - ./var/data/media/web:/var/www/app/web/uploads/media
-            - ./var/logs/symfony/:/var/www/app/var/logs
+            - ./var/logs/app/:/var/www/app/var/logs
 
             - app-volume:/var/www/app:nocopy
             - cache-volume:/var/www/app/var/cache
@@ -35,16 +35,26 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    elk:
-        build: config/elk
+    elasticsearch:
+        build: config/elk/elasticsearch
         ports:
-            - 89:80
+            - 9201:9200
         volumes:
-            - ./config/elk/logstash:/etc/logstash
-            - ./config/elk/logstash/patterns:/opt/logstash/patterns
-        volumes_from:
-            - php
-            - nginx
+            - ./var/data/elasticsearch:/usr/share/elasticsearch/data
+        environment:
+            ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+    kibana:
+        build: config/elk/kibana
+        ports:
+            - 5601:5601
+        depends_on:
+            - elasticsearch
+    logstash:
+        build: config/elk/logstash
+        depends_on:
+            - elasticsearch
+        volumes:
+            - ./var/logs:/var/log/other
 
 volumes:
     app-volume:
