improved env vars

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
-# Application's path (absolute or relative)
-APP_PATH=./app
+# Project's path (absolute or relative)
+PROJECT_PATH=./project
+PROJECT_DOMAIN=app.dev
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
@@ -7,5 +8,11 @@ MYSQL_DATABASE=mydb
 MYSQL_USER=user
 MYSQL_PASSWORD=userpass
 
-# Timezone
-TIMEZONE=Europe/Vienna
+# PHP settings
+PHP_TIMEZONE=Europe/Vienna
+PHP_MEMORY_LIMIT=512M
+
+# Open Ports
+PORT_MYSQL=13306
+PORT_NGINX=10080
+PORT_KIBANA=15601
