--- a/config/elk/logstash/logstash.conf
+++ b/config/elk/logstash/logstash.conf
@@ -1,27 +1,27 @@
 input {
     file {
         type => "nginx_access"
-        path => "/var/log/other/nginx/app_access.log"
+        path => "/var/log/other/nginx/project_access.log"
         start_position => beginning
     }
     file {
-        type => "app_admin_dev"
-        path => "/var/log/other/app/admin/dev.log"
+        type => "project_admin_dev"
+        path => "/var/log/other/project/admin/dev.log"
         start_position => beginning
     }
     file {
-        type => "app_admin_prod"
-        path => "/var/log/other/app/admin/prod.log"
+        type => "project_admin_prod"
+        path => "/var/log/other/project/admin/prod.log"
         start_position => beginning
     }
     file {
-        type => "app_website_dev"
-        path => "/var/log/other/app/website/dev.log"
+        type => "project_website_dev"
+        path => "/var/log/other/project/website/dev.log"
         start_position => beginning
     }
     file {
-        type => "app_website_prod"
-        path => "/var/log/other/app/website/prod.log"
+        type => "project_website_prod"
+        path => "/var/log/other/project/website/prod.log"
         start_position => beginning
     }
 }
@@ -32,7 +32,7 @@ filter {
             patterns_dir => "/usr/share/logstash/patterns/"
             match => { "message" => "%{NGINXACCESS}"}
         }
-    } else if [type] in ["app_website_dev", "app_website_prod", "app_admin_dev", "app_admin_prod"] {
+    } else if [type] in ["project_website_dev", "project_website_prod", "project_admin_dev", "project_admin_prod"] {
         grok {
             patterns_dir => "/usr/share/logstash/patterns"
             match => { "message" => "%{SYMFONY}"}
