--- a/config/nginx/project.conf
+++ b/config/nginx/project.conf
@@ -1,9 +1,9 @@
 server {
-    server_name app.dev;
-    root /var/www/app/web;
+    server_name __PROJECT_DOMAIN__;
+    root /var/www/project/web;
 
-    error_log /var/log/nginx/app_error.log;
-    access_log /var/log/nginx/app_access.log;
+    error_log /var/log/nginx/project_error.log;
+    access_log /var/log/nginx/project_access.log;
 
     # strip app.php/ prefix if it is present
     rewrite ^/app\.php/?(.*)$ /$1 permanent;
