removed docker sync and used cached volumes

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 # Project's path (absolute or relative)
 PROJECT_PATH=./project/
-PROJECT_DOMAIN=app.dev
+PROJECT_DOMAIN=app.lo
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
