improved php and nginx config

--- a/config/nginx/Dockerfile
+++ b/config/nginx/Dockerfile
@@ -1,23 +1,8 @@
-FROM debian:jessie
+FROM nginx:alpine
 
 ARG PROJECT_DOMAIN
 
-RUN apt-get update && apt-get install -y nginx gettext
+ADD project.conf /etc/nginx/conf.d/
 
-ADD nginx.conf /etc/nginx/
-ADD project.conf /etc/nginx/sites-available/
-
-RUN sed -i 's#__PROJECT_DOMAIN__#'"${PROJECT_DOMAIN}"'#g' /etc/nginx/sites-available/project.conf
-RUN cat /etc/nginx/sites-available/project.conf
-
-RUN ln -s /etc/nginx/sites-available/project.conf /etc/nginx/sites-enabled/project
-RUN rm /etc/nginx/sites-enabled/default
-
+RUN sed -i 's#__PROJECT_DOMAIN__#'"${PROJECT_DOMAIN}"'#g' /etc/nginx/conf.d/project.conf
 RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
-
-RUN usermod -u 1000 www-data
-
-CMD ["nginx"]
-
-EXPOSE 80
-EXPOSE 443
