Added Blackfire for profiling.

--- a/.env.dist
+++ b/.env.dist
@@ -16,3 +16,9 @@ PHP_MEMORY_LIMIT=512M
 PORT_MYSQL=13306
 PORT_NGINX=10080
 PORT_KIBANA=15601
+
+# Blackfire:
+BLACKFIRE_SERVER_ID=
+BLACKFIRE_SERVER_TOKEN=
+BLACKFIRE_CLIENT_ID=
+BLACKFIRE_CLIENT_TOKEN=
