--- a/config/php-fpm/conf.d/xdebug.ini
+++ b/config/php-fpm/conf.d/xdebug.ini
@@ -7,7 +7,7 @@ xdebug.profiler_enable_trigger = 1
 xdebug.profiler_output_dir = /tmp/xdebug
 xdebug.remote_port = ${XDEBUG_REMOTE_PORT}
 xdebug.remote_handler = dbgp
-xdebug.remote_autostart = {$XDEBUG_REMOTE_AUTOSTART}
+xdebug.remote_autostart = ${XDEBUG_REMOTE_AUTOSTART}
 xdebug.remote_enable = ${XDEBUG_REMOTE_ENABLE}
 xdebug.remote_connect_back = ${XDEBUG_REMOTE_CONNECT_BACK}
 xdebug.remote_host = ${XDEBUG_REMOTE_HOST}
