added ssh keys to php-conainer

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,12 @@
 PROJECT_PATH=./project/
 PROJECT_DOMAIN=app.lo
 
+# Security
+SSH_KEY_DIR=~/.ssh
+
+# Composer
+COMPOSER_CACHE_DIR=~/.composer
+
 # MySQL
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=mydb
