--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 .env
 /project
+/.docker-sync
+
+# IDEs
 /.idea
 *.iml
-/.docker-sync
+/.vscode
+*~
+
+# System files
+.DS_Store
 
 # Find nicer solution for this folders
 /var
