Added composer and intl to php installation (#11)
* Added composer and intl to php installation

* modified files for release

* fixed wrong document positions

* modified files for composer cache and ssh key

* removed dots

* modified readme

* removed unused sync in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
+# Core files
 .env
 /project
+
+# IDEs
 /.idea
 *.iml
-/.docker-sync
+/.vscode
+*~
+
+# System files
+.DS_Store
 
 # Find nicer solution for this folders
 /var
