changed php user to www-data

--- a/config/php-fpm/Dockerfile
+++ b/config/php-fpm/Dockerfile
@@ -46,9 +46,11 @@ RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
 RUN mv composer.phar /usr/local/bin/composer
 
-COPY composer/* /root/.composer
+COPY composer/config.json /var/www/.composer/config.json
 
 # Copy xdebug and php config.
 COPY conf.d/* /usr/local/etc/php/conf.d/
+
+USER www-data
 
 WORKDIR /var/www/project
