Added additional mysql database

--- a/config/php-fpm/Dockerfile
+++ b/config/php-fpm/Dockerfile
@@ -18,7 +18,8 @@ RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-di
         gd \
         pdo \
         pdo_mysql \
-        opcache
+        opcache \
+        zip
 
 RUN apt-get install -y libicu-dev\
     && docker-php-ext-configure intl \
