Use app.localhost

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 # Project's path (absolute or relative)
 PROJECT_PATH=./project/
-PROJECT_DOMAIN=app.lo
+PROJECT_DOMAIN=app.localhost
 
 # Security
 SSH_KEY_PATH=~/.ssh
