Set memory_consumption to the recommended value (#17)
* set memory_consumption to the recommended value

* remove double line

--- a/config/php-fpm/conf.d/opcache.ini
+++ b/config/php-fpm/conf.d/opcache.ini
@@ -6,7 +6,7 @@
 ;opcache.enable_cli=0
 
 ; The OPcache shared memory storage size.
-;opcache.memory_consumption=64
+opcache.memory_consumption=256
 
 ; The amount of memory for interned strings in Mbytes.
 ;opcache.interned_strings_buffer=4
