configured logstash to read nginx error logfile

--- a/config/elk/logstash/logstash.conf
+++ b/config/elk/logstash/logstash.conf
@@ -5,6 +5,11 @@ input {
         start_position => beginning
     }
     file {
+        type => "nginx_error"
+        path => "/var/log/other/nginx/project_error.log"
+        start_position => beginning
+    }
+    file {
         type => "project_admin_dev"
         path => "/var/log/other/project/admin/dev.log"
         start_position => beginning
@@ -31,6 +36,11 @@ filter {
         grok {
             patterns_dir => "/usr/share/logstash/patterns/"
             match => { "message" => "%{NGINXACCESS}"}
+        }
+    } else if [type] == "nginx_error" {
+        grok {
+            patterns_dir => "/usr/share/logstash/patterns"
+            match => { "message" => "%{NGINXERROR}"}
         }
     } else if [type] in ["project_website_dev", "project_website_prod", "project_admin_dev", "project_admin_prod"] {
         grok {
