--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,13 @@ services:
     volumes:
       - ${PROJECT_PATH}:/var/www/project:cached
       - ./var/logs/symfony:/var/www/project/var/logs:cached
+      - ./var/data/php/workspace:/var/www/workspace:cached
       - ${COMPOSER_PATH}/cache:/var/www/.composer/cache:cached
       - ${SSH_KEY_PATH}/id_rsa:/var/www/.ssh/id_rsa
       - ${SSH_KEY_PATH}/id_rsa.pub:/var/www/.ssh/id_rsa.pub
       - ${SSH_KEY_PATH}/known_hosts:/var/www/.ssh/known_hosts
+    environment:
+      HISTFILE: /var/www/workspace/.bash_history
     env_file: .env
 
   mysql:
