cleaned up docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '2'
+version: '3'
 
 services:
   php:
     build:
-      context: config/php-fpm
+      context: config/php
     volumes:
       - ${PROJECT_PATH}:/var/www/project:cached
       - ./var/logs/project:/var/www/project/var/logs:cached
@@ -11,12 +11,8 @@ services:
       - ${SSH_KEY_PATH}/id_rsa:/var/www/.ssh/id_rsa
       - ${SSH_KEY_PATH}/id_rsa.pub:/var/www/.ssh/id_rsa.pub
       - ${SSH_KEY_PATH}/known_hosts:/var/www/.ssh/known_hosts
-    env_file:
-      - .env
-  blackfire:
-    image: blackfire/blackfire
-    env_file:
-      - .env
+    env_file: .env
+
   nginx:
     build:
       context: config/nginx
@@ -24,10 +20,10 @@ services:
         PROJECT_DOMAIN: ${PROJECT_DOMAIN}
     ports:
       - ${PORT_NGINX}:80
-    volumes_from:
-      - php
     volumes:
+      - ${PROJECT_PATH}:/var/www/project:cached
       - ./var/logs/nginx/:/var/log/nginx
+
   mysql:
     build:
         context: config/mysql
@@ -38,23 +34,26 @@ services:
       - ${PORT_MYSQL}:3306
     volumes:
       - ./var/data/mysql:/var/lib/mysql:cached
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    env_file: .env
+
+  blackfire:
+    image: blackfire/blackfire
+    env_file: .env
+
   elasticsearch:
     build: config/elk/elasticsearch
     volumes:
       - ./var/data/elasticsearch:/usr/share/elasticsearch/data:cached
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+
   logstash:
     build: config/elk/logstash
     depends_on:
       - elasticsearch
     volumes:
       - ./var/logs:/var/log/other:cached
+
   kibana:
     build: config/elk/kibana
     ports:
