increased php memory limit

--- a/.env.dist
+++ b/.env.dist
@@ -16,14 +16,14 @@ MYSQL_PASSWORD=userpass
 
 # PHP settings
 PHP_TIMEZONE=Europe/Vienna
-PHP_MEMORY_LIMIT=512M
+PHP_MEMORY_LIMIT=2048M
 
 # Open Ports
 PORT_MYSQL=13306
 PORT_NGINX=10080
 PORT_KIBANA=15601
 
-# Blackfire:
+# Blackfire
 BLACKFIRE_SERVER_ID=
 BLACKFIRE_SERVER_TOKEN=
 BLACKFIRE_CLIENT_ID=
