changed default database name to match sulu best practices, changed default db password

--- a/.env.dist
+++ b/.env.dist
@@ -10,9 +10,9 @@ COMPOSER_PATH=~/.composer
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=mydb
+MYSQL_DATABASE=sulu
 MYSQL_USER=user
-MYSQL_PASSWORD=userpass
+MYSQL_PASSWORD=password
 
 # PHP settings
 PHP_TIMEZONE=Europe/Vienna
