fixed path of php-container logs in logstash config

--- a/config/elk/logstash/logstash.conf
+++ b/config/elk/logstash/logstash.conf
@@ -10,23 +10,23 @@ input {
         start_position => beginning
     }
     file {
-        type => "project_admin_dev"
-        path => "/var/log/other/project/admin/dev.log"
+        type => "symfony_admin_dev"
+        path => "/var/log/other/symfony/admin/dev.log"
         start_position => beginning
     }
     file {
-        type => "project_admin_prod"
-        path => "/var/log/other/project/admin/prod.log"
+        type => "symfony_admin_prod"
+        path => "/var/log/other/symfony/admin/prod.log"
         start_position => beginning
     }
     file {
-        type => "project_website_dev"
-        path => "/var/log/other/project/website/dev.log"
+        type => "symfony_website_dev"
+        path => "/var/log/other/symfony/website/dev.log"
         start_position => beginning
     }
     file {
-        type => "project_website_prod"
-        path => "/var/log/other/project/website/prod.log"
+        type => "symfony_website_prod"
+        path => "/var/log/other/symfony/website/prod.log"
         start_position => beginning
     }
 }
@@ -42,7 +42,7 @@ filter {
             patterns_dir => "/usr/share/logstash/patterns"
             match => { "message" => "%{NGINXERROR}"}
         }
-    } else if [type] in ["project_website_dev", "project_website_prod", "project_admin_dev", "project_admin_prod"] {
+    } else if [type] in ["symfony_admin_dev", "symfony_admin_prod", "symfony_website_dev", "symfony_website_prod"] {
         grok {
             patterns_dir => "/usr/share/logstash/patterns"
             match => { "message" => "%{SYMFONY}"}
